--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "haUX2BA8T5fA",
@@ -131,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "n6GeSD_bT5fH",
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "ROyQedmaT5fJ",
@@ -437,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -497,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -590,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "1PrXOPRkT5fL",
@@ -641,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -688,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -767,7 +767,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -866,7 +866,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "HWNeLhsnT5fP",
@@ -893,7 +893,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -978,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "ggtf25RsT5fQ",
         "outputId": "d14632f3-723c-4d70-f10d-1f5feef38bd6",
@@ -1050,7 +1050,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "mxEx0DrCT5fR",
         "outputId": "f66a9dd7-5116-4d55-e194-4325d537971e",
@@ -1149,7 +1149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1238,6 +1238,19 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "A spectrogram is a visual representation of the frequency spectrum of a signal as it varies with time. \n",
+        "\n",
+        "The first graph is a narrowband spectrogram, its  contructed by having small window by using a big number of samples, this type spectrogram has a good frequency resolution, but to the detriment of the time resolution. As we can see in this graph the harmonics of each note is very identifiable, but the period is not. With this caractheriscs this spectrogram is mostly used to analisy the spectral content of the differents signals. \n",
+        "\n",
+        "The second graph is a Wideband spectrogram, using a bigger window, it has a better time resolution, but a worse frequency. The period of each note is more identifiable, having a black space between the end and start of most of the notes, however the harmonics are not easily detectable. This spectogram is used primary for analisy the period of different signals.\n"
+      ],
+      "metadata": {
+        "id": "z5dw1TmWGsV4"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "deletable": false,
         "id": "KlSfUzmIT5fS",
@@ -1299,7 +1312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1397,7 +1410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1468,7 +1481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "Soey2laQT5fU",
@@ -1521,7 +1534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1608,7 +1621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1697,7 +1710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1777,6 +1790,13 @@
         "\n",
         "❓Identify the differences between the results of the automatic onset detector and the human reference. What types of errors exist? What metrics should be used to assess the performance of the onset detector?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "PER9Lrg1GOZy"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1872,7 +1892,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1942,7 +1962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "DGAHkQKtT5fa",
@@ -2004,7 +2024,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -2057,7 +2077,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -2165,7 +2185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -2252,7 +2272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "id": "mO7fS9xIT5fc",
@@ -2332,7 +2352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
