--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -1816,10 +1816,11 @@
         }
       },
       "source": [
-        "#Topicos\n",
-        "- Numero de notas diferente\n",
-        "- Tempo de inicio e final diferentes\n",
-        "- Tudo referente ao input humano\n"
+        "\n",
+        "There are some noticible differences when comparing both. The automatic onset detector detected less notes, 16 to be exact, compared to the 18 original notes.\n",
+        "Furthermore, the start and finish time of each note do not align with the human reference.\n",
+        "\n",
+        "Those exemples could be used as metrics to assess the performance of the onset detector. A data base of samples should be created also containing the human reference. Allowing the onset detector to be tested and compared. \n"
       ]
     },
     {
